# psync

./: .gitignore  AGENTS.md  PROTOCOL.md  README.md  The Grand Synthesis: Systolic Geometry, Hurwitz Surfaces, Desmic Systems, and the I Ching.md  ftf.cabal  verify-wire.sh
app/: Main.hs
dev-docs/: 240-configuration shell + trit core + Weyl  + E8 agent system.md  241-Board Ring Ladder v0.md  Axiomatic System - Fano–Trace Federation.md  Danzer kernel interface.md  Discrete Systolic Gate.md  FTF Wire Format Specification (v1).md  LED Algebraic Lift Specification.md  LED-Ring Synchronization via Binary Quadratic Dynamics and Two-Graph Semantics.md  Miquel(8_3 6_4) - the cube face-circle configuration.md  Möbius–Kantor-only kernel.md  Operational Layer for the Fano–Trace Federation (FTF).md  The 240 Configuration Lattice.md  The 240 Configuration Space.md  The 8‑Tuple as a Universal Computational Invariant.md  The Core Idea.md  The T Structure.md  The Universal Computational Invariant - An Upgraded Synthesis.md  Three Roles.md  Trit-Core Polynomial Decomposition System.md  What a Configuration Really Is.md  What t Represents.md  axiom-faces.md
docs/: ARCHITECTURE-BUNDLE.md  ARCHITECTURE.md  CATEGORY.md  FANO-CLOSURE.md  quickstart.md  topology-report-v0.md  v0.2.0-spaces-cli-spec.md
public/: app.js  index copy.html  index.html  script.js  styles.css
rust/ftf-verify/: Cargo.toml  README.md
rust/ftf-verify/src/: main.rs
scripts/: check-federated-handoff-proof.sh  check-federated-must-reject-proof.sh  check-public-federated-handoff-proof.sh  release.sh  (+12 more)
(+76 files in other folders)
