cabal-version:      2.4
name:               ftf
version:            0.1.0.0
build-type:         Simple

executable ftf
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:
      base ^>=4.15 || ^>=4.16 || ^>=4.17 || ^>=4.18 || ^>=4.19,
      aeson,
      bytestring,
      cborg,
      containers,
      cryptonite,
      directory,
      filepath,
      memory,
      optparse-applicative,
      text
