[package]
name = "ftf-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
minicbor = { version = "0.25", features = ["std"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["std"] }
thiserror = "1.0"
